tests/fixtures/sample_build_output.txt
src/main/java/com/example/DisenchantmentTableBlock.java:42: error: cannot find symbol: method getEnchantments()
        var enchants = sword.getEnchantments();
                           ^
